Resolve issue with links on mobile devices for 1:2 and 3:4 cards

--- a/less/components/consonant/cards/three-fourth.less
+++ b/less/components/consonant/cards/three-fourth.less
@@ -9,6 +9,7 @@
         flex: 1 1 0;
         height: @consonant-cardMobileHeight;
         padding: 0;
+        text-decoration: none;
         border: 1px solid @consonantGray300;
         border-radius: 4px;
         background-color: @consonantBaseColor;
